<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/drw_round_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/noto_sans_cjk_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/txt_approval_attach"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_attach_dialog"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="20dp"
            android:scrollbarSize="4dp"
            android:scrollbarThumbVertical="@drawable/drw_popup_scrollbar"
            android:scrollbars="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/white_six" />

        <RelativeLayout
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/noto_sans_cjk_kr_regular"
                android:includeFontPadding="false"
                android:text="@string/txt_close"
                android:textColor="@color/greyish_brown"
                android:textSize="14dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_two_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:text="@string/txt_service_cancel"
                    android:textColor="@color/warm_grey"
                    android:textSize="14dp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white_six" />

            <LinearLayout
                android:id="@+id/layout_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:text="@string/txt_service_confirm"
                    android:textColor="@drawable/color_tab_text_select4"
                    android:textSize="14dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
