<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#66000000"
    android:id="@+id/dialog_bg"
    android:gravity="center">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:background="@drawable/drw_round_white"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_cjk_kr_medium"
                android:includeFontPadding="false"
                android:text="가결"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/noto_sans_cjk_kr_medium"
                android:includeFontPadding="false"
                android:text="@string/txt_approval_txt_1"
                android:textColor="@color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/comment_edit"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/drw_round_opinion_edit"
            android:fontFamily="@font/noto_sans_cjk_kr_regular"
            android:gravity="top"
            android:hint="@string/txt_approval_txt_2"
            android:includeFontPadding="false"
            android:maxLength="200"
            android:paddingLeft="14dp"
            android:paddingTop="14dp"
            android:paddingRight="14dp"
            android:paddingBottom="14dp"
            android:textColor="@color/black"
            android:textColorHint="@color/warm_grey"
            android:textSize="14dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/white_six" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_comment1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/noto_sans_cjk_kr_medium"
                android:includeFontPadding="false"
                android:text="@string/txt_alert_cancel"
                android:textColor="@color/warm_grey"
                android:textSize="14dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white_six" />

            <Button
                android:id="@+id/btn_comment2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/noto_sans_cjk_kr_medium"
                android:includeFontPadding="false"
                android:text="@string/txt_alert_confirm"
                android:textColor="@color/lightish_blue"
                android:textSize="14dp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
