<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/drw_round_white"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_dynamic_approval_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/noto_sans_cjk_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/txt_service_desk_popup_txt1"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/tv_dynamic_approval_comment_edit"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/drw_round_opinion_edit"
            android:fontFamily="@font/noto_sans_cjk_kr_regular"
            android:gravity="top"
            android:hint="@string/txt_approval_txt_2"
            android:includeFontPadding="false"
            android:maxLength="200"
            android:paddingLeft="14dp"
            android:paddingTop="14dp"
            android:paddingRight="14dp"
            android:paddingBottom="14dp"
            android:textColor="@color/black"
            android:textColorHint="@color/warm_grey"
            android:textSize="14dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="@color/very_light_pink" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btn_dynamic_approval_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:text="@string/txt_alert_cancel"
                    android:textColor="@color/warm_grey"
                    android:textSize="14dp" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/very_light_pink" />

            <LinearLayout
                android:id="@+id/btn_dynamic_approval_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_dynamic_approval_right_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_medium"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:text="@string/txt_service_cancel"
                    android:textColor="@color/greyish"
                    android:textSize="14dp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
