<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="57dp">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:background="@drawable/icon_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/noto_sans_cjk_kr_bold"
            android:includeFontPadding="false"
            android:text="@string/txt_approval_line"
            android:textColor="@color/black"
            android:textSize="18dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/btn_textsize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:background="@drawable/icon_text_k" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="56dp"
                android:layout_height="34dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/round_btn_sub_view"
                android:fontFamily="@font/noto_sans_cjk_kr_medium"
                android:includeFontPadding="false"
                android:text="@string/txt_alert_confirm"
                android:textColor="@color/black"
                android:textSize="16dp"/>
            
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/very_light_pink" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/very_light_pink_two"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_approval_line_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/noto_sans_cjk_kr_regular"
                    android:includeFontPadding="false"
                    android:text="aaa"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_cjk_kr_regular"
                    android:includeFontPadding="false"
                    android:layout_marginTop="3dp"
                    android:text="@string/txt_approval_line_txt4"
                    android:textColor="@color/greyish_brown"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/noto_sans_cjk_kr_regular"
                    android:includeFontPadding="false"
                    android:text="@string/txt_approval_line_txt5"
                    android:textColor="@color/greyish_brown"
                    android:textSize="12dp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_approval_line"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/lightish_blue"
                android:gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/icon_bottom_plus" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:fontFamily="@font/noto_sans_cjk_kr_regular"
                    android:includeFontPadding="false"
                    android:text="@string/txt_approval_line_add"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>

        <com.kolon.sign2.view.TextSizeAdjView
            android:id="@+id/view_text_size_adj"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>
